<resources>
    <string name="app_name" translatable="false">sync_dir_to_cloud</string>
    <string name="description_sync_task_add_button">Добавление задачи по синхронизации</string>
    <string name="BUTTON_dots">…</string>
    <string name="FRAGMENT_TASK_EDIT_sync_mode_label">Work mode:</string>
    <string name="tools_source_path">Source path</string>
    <string name="tools_target_path">Target path</string>
    <string name="hint_target_path_input">Target path</string>
    <string name="hint_source_path_input">Source path</string>
    <string name="FRAGMENT_TASK_LIST_title">Sync tasks</string>
    <string name="FRAGMENT_TASK_EDIT_creation_title">New task</string>
    <string name="FRAGMENT_TASK_EDIT_edition_title">Edit task</string>
    <string name="FRAGMENT_SETTINGS_title">Settings</string>
    <string name="FRAGMENT_SYNC_LOG_page_title">Synchronization log</string>
    <string name="FRAGMENT_TASK_INFO_title">Task properties</string>
    <string name="BUTTON_task_edit_cancel">Cancel</string>
    <string name="BUTTON_task_edit_save">Save</string>
    <string name="description_sync_task_play_button">Start task</string>
    <string name="description_sync_task_edit_button">Edit task</string>
    <string name="hint_sync_task_interval_hour">Hours</string>
    <string name="hint_sync_task_interval_minute">Minutes</string>
    <string name="saving_new_task">Saving task</string>
    <string name="task_saved">Task saved</string>
    <string name="description_sync_task_state">Task state</string>
    <string name="description_sync_task_more_actions">More actions</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="sync_task_regularity_picker_title">Execute every …</string>
    <string name="sync_task_period_label">Execute every</string>
    <string name="description_sync_task_period_change_button">Change execution interval</string>
    <string name="description_sync_task_select_source_path">Select source path</string>
    <string name="description_sync_task_select_target_path">Select target path</string>
    <string name="sync_task_interval_view">%1$d %2$s %3$d %4$s</string>
    <string name="BUTTON_task_edit_select_cloud_auth">Select credentials</string>
    <string name="description_cloud_auth_add_button">Add cloud credentials</string>
    <string name="DIALOG_AUTH_TYPE_title">Select cloud type</string>
    <string name="CLOUD_TYPE_NAME_yandex_disk">Yandex.Disk</string>
    <string name="CLOUD_TYPE_NAME_google_drive">Google Drive</string>
    <string name="description_select_source_path_button">Source path selection</string>
    <string name="BUTTON_select_cloud_auth">Cloud credentials selection</string>
    <string name="description_home_icon_back">Go back</string>
    <string name="BUTTON_auth">Request access</string>
    <string name="auth_type_google">Google</string>
    <string name="hint_auth_name">Title</string>
    <string name="BUTTON_cancel">Cancel</string>
    <string name="BUTTON_save">Save</string>
    <string name="DIALOG_AUTH_CREATE_title">Creating new authorization</string>
    <string name="VALIDATION_cloud_authorization_required">Cloud authorization required</string>
    <string name="VALIDATION_name_already_used">Title already in use</string>
    <string name="auth_error">Authorization error</string>
    <string name="VALIDATION_cannot_be_empty">Cannot be empty</string>
    <string name="DIALOG_AUTH_LIST_title">Storage selection</string>
    <string name="TOAST_select_cloud_auth_first">Choose cloud authorization</string>
    <string name="notifications_channel_name">Sync state</string>
    <string name="notifications_channel_description">Sync state notifications</string>
    <string name="NOTIFICATION_idle">Waiting</string>
    <string name="NOTIFICATION_title">Synchronization</string>
    <string name="NOTIFICATION_reading_source">Reading source</string>
    <string name="NOTIFICATION_writing_target">Sending to target</string>
    <string name="NOTIFICATION_success">Synchronization successful</string>
    <string name="NOTIFICATION_semi_success">Synchronization partially successful</string>
    <string name="NOTIFICATION_error">Synchronization error</string>
    <string name="MENU_ITEM_app_properties">App properties</string>
    <string name="there_is_no_task_id">TaskId missing</string>
    <string name="ERROR_storage_access_required">Storage access required</string>
    <string name="MENU_ITEM_manage_external_storage">Manage external storage</string>
    <string name="MENU_ITEM_action_delete">Delete</string>
    <string name="DELETE_DIALOG_title">Delete task?</string>
    <string name="DIALOG_BUTTON_yes">Yes</string>
    <string name="DIALOG_BUTTON_no">No</string>
    <string name="SCHEDULING_STATE_scheduling_now">Scheduling now</string>
    <string name="SCHEDULING_STATE_scheduling_error">Scheduling error: %1$s</string>
    <string name="SCHEDULING_STATE_disabled">Disabled</string>
    <string name="SCHEDULING_STATE_scheduled_short_form">Scheduling for every %1$d %2$s</string>
    <string name="SCHEDULING_STATE_scheduled_long_form">Scheduling for every %1$d %3$s %2$d %4$s</string>
    <string name="EXECUTION_STATE_error">Execution error: %1$s</string>
    <string name="EXECUTION_STATE_running">Executing now</string>
    <string name="EXECUTION_STATE_cancelled">Cancelled</string>
    <string name="EXECUTION_STATE_idle">Inactive</string>
    <string name="never">never</string>
    <string name="last_run_unknown_yet">unknown yet</string>
    <string name="last_start_info">Last run: %1$s</string>
    <string name="last_finish_info">Finished at: %1$s</string>
    <string name="sync_object_info_dialog_title">Object info</string>
    <string name="DIALOG_BUTTON_close">Close</string>
    <string name="EXECUTION_STATE_success">Synced</string>
    <string name="MENU_ITEM_action_start_stop_task">Start or stop task</string>
    <string name="MENU_ITEM_action_probe_change_task_state">Sample task state toggling</string>
    <string name="SPINNER_storage_type_default_value">Storage type</string>
    <string name="ERROR_select_storage_type">Select storage type</string>
    <string name="MENU_storage_type_local">Local storage</string>
    <string name="MENU_storage_type_yandex">Yandex.Disk</string>
    <string name="MENU_storage_type_google">Google Drive</string>
    <string name="unknown_error">Unknown error</string>
    <string name="speed_dial_auth_label_local">Local</string>
    <string name="speed_dial_auth_label_yandex">Yandex</string>
    <string name="auth_suffix_yandex">to Yandex.Disk</string>
    <string name="auth_suffix_local">to Local storage</string>
    <string name="BUTTON_LABEL_auth_prefix">Request access %1$s</string>
    <string name="BUTTON_LABEL_unknown_storage_type">Unknown storage type</string>
    <string name="cloud_auth_dialog_title">New cloud authorization</string>
    <string name="DIALOG_WEBVIEW_NOT_AVAILABLE_title">WebView not found</string>
    <string name="DIALOG_WEBVIEW_NOT_AVAILABLE_message">The WebView component required to display the authorization page was not found in your system.</string>
    <string name="DIALOG_WEBVIEW_NOT_AVAILABLE_neutral_button">Got it</string>
    <string name="MENU_ITEM_action_edit_task">Edit task</string>
    <string name="MENU_ITEM_action_enabling_toggle">Enable/disable</string>
    <string name="task_is_enabled">Scheduled</string>
    <string name="task_is_disabled">Disabled</string>
    <string name="MENU_ITEM_action_reset">Reset</string>
    <string name="MENU_ITEM_action_reset_execution_state">Reset execution state</string>
    <string name="SYNC_OBJECT_LOG_lost_dir_creation_success">Missing dir was created</string>
    <string name="SYNC_OBJECT_LOG_lost_dir_creation_error">Error creating missing dir: %1$s</string>
    <string name="SYNC_OBJECT_LOGGER_create_new_dir">Creating new dir</string>
    <string name="SYNC_OBJECT_LOGGER_create_never_processed_dir">Creating never processed dir</string>
    <string name="SYNC_OBJECT_LOGGER_create_in_target_lost_dir">Restoring dir</string>
    <string name="SYNC_OBJECT_LOGGER_copy_new_file">Copying new file</string>
    <string name="SYNC_OBJECT_LOGGER_copy_previously_forgotten_file">Copying previously forgotten file</string>
    <string name="SYNC_OBJECT_LOGGER_copy_modified_file">Copying changed file</string>
    <string name="SYNC_OBJECT_LOGGER_copy_in_target_lost_file">Restoring missing file</string>
    <string name="SYNC_OBJECT_LOGGER_deleting_dir">Dir deleting</string>
    <string name="SYNC_OBJECT_LOGGER_deleting_file">File deleting</string>
    <string name="SYNC_OBJECT_LOGGER_backuping_dir">Dir backup</string>
    <string name="SYNC_OBJECT_LOGGER_backuping_file">File backup</string>
    <string name="SYNC_LOG_error_insufficient_arguments">Insufficient arguments count</string>
    <string name="LOG_ITEM_DETAILS_DIALOG_no_log_item_supplied">There is no object to display</string>
    <string name="LOG_ITEM_DETAILS_DIALOG_title">Operation details</string>
    <string name="LOG_ITEM_DETAILS_DIALOG_close_button">Close</string>
    <string name="LOG_ITEM_DETAILS_DIALOG_item_name_quotes">«%1$s»</string>
    <string name="LOG_ITEM_DETAILS_DIALOG_error_with_details">Error:\n%1$s</string>
    <string name="TASK_STATE_running">Executed since %1$s</string>
    <string name="TASK_STATE_finished">Completed. Started: %1$s, duration: %2$s</string>
    <string name="TASK_STATE_error">Error: %1$s; started: %2$s, executed for: %3$s</string>
    <string name="SYNC_OPERATION_backuping_deleted_dir">Deleted dir backup</string>
    <string name="SYNC_OPERATION_deleting_deleted_dir">Deleting dir</string>
    <string name="SYNC_OPERATION_creating_new_dir">Creating new dir</string>
    <string name="SYNC_OPERATION_copy_new_file">Copying new file</string>
    <string name="SYNC_OBJECT_LOGGER_resetting_bad_sates">Resetting bad states</string>
    <string name="SYNC_OBJECT_LOGGER_reading_source">Reading source</string>
    <string name="SYNC_OBJECT_LOGGER_reading_target">Reading target</string>
    <string name="SYNC_OBJECT_LOGGER_backuping_modified_deleted">Backing modified, deleted items</string>
    <string name="EXECUTION_LOG_reading_source">Reading source</string>
    <string name="EXECUTION_LOG_reading_target">Reading target</string>
    <string name="EXECUTION_LOG_backing_up_dirs_in_target">Backing up dirs in target</string>
    <string name="EXECUTION_LOG_backing_up_deleted_files">Backing up deleted files</string>
    <string name="EXECUTION_LOG_backing_up_modified_files">Backing up modified files</string>
    <string name="EXECUTION_LOG_creating_new_dirs">Creating new dirs</string>
    <string name="EXECUTION_LOG_creating_never_processed_dirs">Creating previously forgotten dirs</string>
    <string name="EXECUTION_LOG_creating_in_target_lost_dirs">Creating in target lost dirs</string>
    <string name="EXECUTION_LOG_copying_new_files">Copying new files</string>
    <string name="SETTINGS_re_create_missing_source_and_target_dirs">Re-create lost Source and Target dirs</string>
    <string name="SETTINGS_SUMMARY_re_create_missing_source_and_target_dirs">Dangerous. Leads to data loss in tasks with backup disabled!</string>
    <string name="KEY_settings_re_create_missing_source_and_target_dirs" translatable="false">settings_re_create_missing_source_and_target_dirs</string>
    <string name="KEY_settings_file_transfer_retardation_ms" translatable="false">settings_file_transfer_retardation_ms</string>
    <string name="KEY_settings_dry_run" translatable="false">settings_dry_run</string>
    <string name="SETTINGS_file_transfer_retardation_ms">File copying retardation, ms</string>
    <string name="SETTINGS_SUMMARY_file_transfer_retardation_ms">Waiting after transferring each piece of data when copying files</string>
    <string name="SETTINGS_dry_run">Dry run</string>
    <string name="SETTINGS_SUMMARY_dry_run">Prepare work, but not really do it</string>
</resources>