<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="@bool/DEFAULT_settings_re_create_missing_source_and_target_dirs"
        android:key="@string/KEY_settings_re_create_missing_source_and_target_dirs"
        android:title="@string/SETTINGS_re_create_missing_source_and_target_dirs"
        android:summary="@string/SETTINGS_SUMMARY_re_create_missing_source_and_target_dirs"
        />

    <androidx.preference.EditTextPreference
        android:icon="@drawable/ic_time"
        android:dialogIcon="@drawable/ic_time"
        android:defaultValue="@integer/DEFAULT_settings_file_transfer_retardation_ms"
        android:key="@string/KEY_settings_file_transfer_retardation_ms"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:singleLineTitle="true"
        android:title="@string/SETTINGS_file_transfer_retardation_ms"
        android:summary="@string/SETTINGS_SUMMARY_file_transfer_retardation_ms"
        app:useSimpleSummaryProvider="true"
        android:inputType="numberDecimal"
        />

    <CheckBoxPreference
        android:defaultValue="@bool/DEFAULT_settings_dry_run"
        android:key="@string/KEY_settings_dry_run"
        android:title="@string/SETTINGS_dry_run"
        android:summary="@string/SETTINGS_SUMMARY_dry_run"
        />

</PreferenceScreen>