<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sourcePathInput"
            style="@style/path_input"
            android:hint="@string/hint_source_path_input"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/sourcePathSelectionButton"
            style="@style/path_select_button"
            android:contentDescription="@string/description_sync_task_select_source_path"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/targetPathInput"
            style="@style/path_input"
            android:hint="@string/hint_target_path_input"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/targetPathSelectionButton"
            style="@style/path_select_button"
            android:contentDescription="@string/description_sync_task_select_target_path" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/intervalHours"
            android:hint="@string/hint_sync_task_interval_hour"
            style="@style/regularity_input"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/intervalMinutes"
            android:hint="@string/hint_sync_task_interval_minute"
            style="@style/regularity_input"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/periodSelectionButton"
            style="@style/path_select_button"
            android:contentDescription="@string/description_sync_task_period_change_button"
            android:src="@drawable/ic_period_button"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BUTTON_task_edit_save" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:text="@string/BUTTON_task_edit_cancel" />

    <TextView
        android:id="@+id/progressMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/secondaryVariant"
        tools:visibility="visible"
        tools:text="Сообщение об операции" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/design_default_color_error"
        tools:visibility="visible"
        tools:text="Сообщение об ошибке" />

</LinearLayout>