<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionEnablingToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_task_enabling_toggle"
        android:title="@string/MENU_ITEM_action_enabling_toggle" />

    <item
        android:id="@+id/actionDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_delete"
        android:title="@string/MENU_ITEM_action_delete" />

    <item
        android:id="@+id/actionReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_reset"
        android:title="@string/MENU_ITEM_action_reset" />
</menu>