<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sourceTypeIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:minWidth="42dp"
            tools:srcCompat="@drawable/ic_storage_type_local" />

        <TextView
            android:id="@+id/sourcePath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ellipsize="start"
            tools:text="/path/to/source/very/long/path/to/source/path/to/source/very/long/path/to/source" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/targetTypeIcon"
            style="@style/task_list_item_info_row_icon"
            android:minWidth="42dp"
            tools:srcCompat="@drawable/ic_storage_type_yandex_disk" />

        <TextView
            android:id="@+id/targetPath"
            style="@style/task_list_item_info_row_text"
            tools:text="/path/to/target" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskActionsRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/taskStateView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:layout_weight="0"
            android:contentDescription="@string/description_sync_task_state"
            tools:srcCompat="@drawable/ic_task_state_scheduled" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enablingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/description_sync_task_edit_button" />

        <ImageButton
            android:id="@+id/runButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/description_sync_task_play_button"
            app:srcCompat="@drawable/ic_task_start" />

        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_baseline_more_vert_24"
            android:contentDescription="@string/description_sync_task_more_actions" />


    </LinearLayout>

</LinearLayout>