<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            style="@style/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cloud_auth_dialog_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/storageTypeView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_storage_type_yandex_disk" />

            <EditText
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_auth_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:minEms="20"
                android:singleLine="true"
                android:textAlignment="center" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/errorView"
            style="@style/error_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="16sp"
            tools:text="Сообщение об ошибке"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/authRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:backgroundTint="#66BB6A"
            android:text="@string/BUTTON_auth" />

        <include
            android:id="@+id/saveCancelButtonsInclude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/save_cancel_buttons"/>

    </LinearLayout>

</ScrollView>